--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noindex",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "noIndex is database for multiple users / repositories / backend. in-memory cache for git content",
   "homepage": "https://github.com/vmolsa/noIndex",
   "author": "https://github.com/vmolsa",
@@ -12,7 +12,12 @@
     "url": "https://github.com/vmolsa/noIndex/issues"
   },
   "keywords": [
-    "webrtc"
+    "git",
+    "in-memory",
+    "cache",
+    "github",
+    "redis",
+    "indexedDB"
   ],
   "license": "MIT",
   "main": "./lib/noIndex.js",
